Desktop app can pull the latest version of VR modules
- Check latest version & installed version of modules
- download latest version if not downloaded yet
- unzip downloaded file
- save version metadata in user storage

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -124,4 +124,8 @@
       (click)="toggleConsole()" >
       Show/hide Console
     </ion-button>
+    <ion-button color="meduim" fill="clear" size='small'
+      (click)="resetModules()" >
+      Clear Saved Modules
+    </ion-button>
 </ion-content>
