--- a/src/assets/views/console.html
+++ b/src/assets/views/console.html
@@ -4,7 +4,8 @@
         <title>Console Log</title>
     </head>
     <body>
-        <div id="console-body"></div>
+        <div id="console-body" tabindex="0"></div>
+        <div id="clear-btn">Clear</div>
         <style>
             body {
                 background: black;
@@ -17,6 +18,17 @@
                 padding-bottom: 20%;
                 font-size: 12px;
                 line-height: 1.5;
+            }
+            #clear-btn{
+                color: white;
+                cursor: pointer;
+                font-size: small;
+                border: 1px solid green;
+                text-align: center;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 100%;
             }
             span {
                 color: ivory;
