--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -92,14 +92,14 @@
           <ion-card>
             <ion-card-header>
               <ion-card-title color="medium">{{module?.name}}</ion-card-title>
-              <div *ngIf="module?.ratio">
-                <div *ngIf="module?.ratio < 1">
-                  <ion-progress-bar [value]="module?.ratio"
-                  buffer="module?.ratio" 
+              <div *ngIf="mainEventsService.trackedModules[module.id]?.ratio">
+                <div *ngIf="mainEventsService.trackedModules[module.id]?.ratio < 1">
+                  <ion-progress-bar [value]="mainEventsService.trackedModules[module.id]?.ratio"
+                  [buffer]="mainEventsService.trackedModules[module.id]?.ratio" 
                   color="success" ></ion-progress-bar>
                   Downloading Updates...
                 </div>
-                <div *ngIf="module?.ratio == 1">
+                <div *ngIf="mainEventsService.trackedModules[module.id]?.ratio == 1">
                   <ion-progress-bar 
                   type="indeterminate"
                   color="primary" ></ion-progress-bar>
