Fix js error if quit downloading

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -158,6 +158,6 @@
     </ion-button>
     <ion-button color="meduim" fill="clear" size='small'
       (click)="resetModules()" >
-      Clear Saved Modules
+      Clear Downloaded Modules
     </ion-button>
 </ion-content>
