List patient modules with card images

--- a/src/app/pages/patient/patient.page.scss
+++ b/src/app/pages/patient/patient.page.scss
@@ -20,3 +20,7 @@ ion-button {
     margin-left: auto;
     margin-right: auto;
 }
+
+.has-updates {
+    border: 2px solid var(--ion-color-warning);
+}
