--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -88,66 +88,74 @@
     </ion-list-header>
     <ion-grid>
       <ion-row align-items-start justify-content-center>
-        <ion-col size="12" size-md="6" *ngFor="let module of modules">
-          <ion-card>
+        <ion-col size="3" *ngFor="let module of modules">
+          <ion-card [ngClass]="{'has-updates': mainEventsService.trackedModules[module.id]?.new_version}">
+            <img [src]="module?.image ||'assets/imgs/vr_logo.jpeg'"/>
             <ion-card-header>
-              <ion-card-title color="medium">{{module?.name}}</ion-card-title>
-                <div *ngIf="mainEventsService.trackedModules[module.id]?.downloading">
-                  <ion-progress-bar [value]="mainEventsService.trackedModules[module.id]?.ratio"
-                  [buffer]="mainEventsService.trackedModules[module.id]?.ratio" 
-                  color="success" ></ion-progress-bar>
-                  Downloading Updates...
-                  <ion-button *ngIf="!mainEventsService.trackedModules[module.id]?.paused"
-                  color="primary" fill="clear" size='small' (click)="pauseDownloading(module)">
-                    <ion-icon name="pause"></ion-icon>
-                  </ion-button>
-                  <ion-button *ngIf="mainEventsService.trackedModules[module.id]?.paused"
-                   color="primary" fill="clear" size='small' (click)="resumeDownloading(module)">
-                    <ion-icon name="play"></ion-icon>
-                  </ion-button
-                  >
-                </div>
-                <div *ngIf="mainEventsService.trackedModules[module.id]?.installing">
-                  <ion-progress-bar 
-                  type="indeterminate"
-                  color="primary" ></ion-progress-bar>
-                  Installing Updates...
-                </div>
+              <ion-card-title color="secondary">{{module?.name}}</ion-card-title>
+              <ion-card-subtitle>
+                {{module?.description || 'Our products feature a setup that allows therapists to adjust the difficulty of the VR exercises.'}}
+            </ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>
+              <div *ngIf="mainEventsService.trackedModules[module.id]?.downloading">
+                <ion-progress-bar [value]="mainEventsService.trackedModules[module.id]?.ratio"
+                [buffer]="mainEventsService.trackedModules[module.id]?.ratio" 
+                color="success" ></ion-progress-bar>
+                Downloading Updates...
+                <ion-button *ngIf="!mainEventsService.trackedModules[module.id]?.paused"
+                color="primary" fill="clear" size='small' (click)="pauseDownloading(module)">
+                  <ion-icon name="pause"></ion-icon>
+                </ion-button>
+                <ion-button *ngIf="mainEventsService.trackedModules[module.id]?.paused"
+                  color="primary" fill="clear" size='small' (click)="resumeDownloading(module)">
+                  <ion-icon name="play"></ion-icon>
+                </ion-button>
+              </div>
+
+              <div *ngIf="mainEventsService.trackedModules[module.id]?.installing">
+                <ion-progress-bar 
+                type="indeterminate"
+                color="primary" ></ion-progress-bar>
+                Installing Updates...
+              </div>
 
               <div *ngIf="!mainEventsService.trackedModules[module.id]?.downloading && !mainEventsService.trackedModules[module.id]?.installing">
                 <ion-text color="medium" *ngIf="mainEventsService.trackedModules[module.id]?.new_version">
                   <ion-icon color="primary" name="alert"></ion-icon>
-                  The new version {{mainEventsService.trackedModules[module.id]?.new_version}} is available.
+                  Version {{mainEventsService.trackedModules[module.id]?.new_version}} is available.
                   <ion-button color="primary" fill="clear" size='small' (click)="downloadLatestVersion(module)">
-                    Download Now
+                    Download
                   </ion-button>
                 </ion-text>
                 <ion-text color="medium" *ngIf="mainEventsService.trackedModules[module.id]?.new_version_not_installed">
                 <ion-icon color="primary" name="alert"></ion-icon>
-                  The new version {{mainEventsService.trackedModules[module.id]?.new_version}} is not installed.
+                  Version {{mainEventsService.trackedModules[module.id]?.new_version}} is not installed.
                   <ion-button color="primary" fill="clear" size='small' (click)="installLatestVersion(module)">
-                    Install Now
+                    Install
                   </ion-button>
                 </ion-text>
               </div>
 
-            </ion-card-header>
-            <ion-grid>
-              <ion-row>
-                <ion-col>
-                  <ion-button  expand="block" size="small"  color="primary" (click)="runModule(module)"
-                  [disabled] = "mainEventsService.noHeadsetsReady()">
-                    {{'PATIENT.START_MODULE' | translate}}
-                  </ion-button>
-                </ion-col>
-                <ion-col>                 
-                  <ion-button fill="outline" size="small" expand="block" color="secondary"
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <ion-button expand="full" shape="round" fill="outline"  color="primary" (click)="runModule(module)"
+                    [disabled] = "mainEventsService.noHeadsetsReady()">
+                    <ion-icon name="play" slot="icon-only"></ion-icon>
+                      <!-- {{'PATIENT.START_MODULE' | translate}} -->
+                    </ion-button>
+                  </ion-col>
+                  <ion-col>                 
+                    <ion-button fill="outline"  expand="full" shape="round" color="secondary"
                     [routerLink]="['/patient/', patient.id, 'modules', module.id, 'charts']">
-                    Show Statistics
-                  </ion-button>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
+                    <ion-icon name="analytics" slot="icon-only"></ion-icon>
+                      <!-- Show Statistics -->
+                    </ion-button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-card-content>
           </ion-card>
         </ion-col>
         <div class="empty-content" *ngIf="!modules?.length">
