Add remind me tomorrow option to auto update install

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -94,7 +94,7 @@
             <ion-card-header>
               <ion-card-title color="secondary">{{module?.name}}</ion-card-title>
               <ion-card-subtitle>
-                {{module?.description || 'Our products feature a setup that allows therapists to adjust the difficulty of the VR exercises.'}}
+                {{module?.description}}
             </ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
