--- a/src/app/pages/stats/stats.component.css
+++ b/src/app/pages/stats/stats.component.css
@@ -43,6 +43,12 @@ td.mat-cell {
   text-align: center;
 }
 
+table,
+th,
+td {
+  border: 1px solid var(--ion-color-medium);
+}
+
 @media only screen and (max-width: 900px) {
   /* div.chart { 
         width: 700px;
