--- a/src/global.scss
+++ b/src/global.scss
@@ -10,9 +10,10 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-.error{
-    color: red;
+.error {
+  color: red;
 }
+
 .empty-content {
   clear: both;
 
@@ -21,7 +22,7 @@
     text-align: center;
     font-size: 150px;
   }
-  
+
   .empty-title {
     text-align: center;
     font-size: 20px;
@@ -40,13 +41,24 @@
     margin: 23px;
   }
 
-  ion-icon{
+  ion-icon {
     color: var(--ion-color-medium)
   }
 }
+
 .sc-ion-alert-md-h {
   --min-width: 400px;
 }
-ion-item.item-radio-checked{
-    color: var(--ion-color-primary);
+
+ion-item.item-radio-checked {
+  color: var(--ion-color-primary);
+}
+
+th div.mat-sort-header-container {
+  display: block !important;
+  text-align: center;
+}
+
+.mat-sort-header-container  .mat-sort-header-button {
+  padding: 7px;
 }
