--- a/src/app/pages/patient/patient.page.scss
+++ b/src/app/pages/patient/patient.page.scss
@@ -24,3 +24,8 @@ ion-button {
 .has-updates {
     border: 2px solid var(--ion-color-warning);
 }
+
+ion-select {
+
+    justify-content: center;
+}
