--- a/src/app/pages/edit-patient/edit-patient.component.html
+++ b/src/app/pages/edit-patient/edit-patient.component.html
@@ -6,7 +6,7 @@
     <ion-title>{{'PATIENT.EDIT_PATIENT' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content class="ion-padding">
   <form [formGroup]="patientForm">
     <ion-list>
       <ion-item>
