--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 
-<ion-content padding>
+<ion-content class="ion-padding">
    <ion-img src="assets/imgs/logo.png"></ion-img>
    <h2><b>Virtual World, Real Hope</b></h2>
   <form [formGroup]="loginForm" (keyup.enter)="save()">
