--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -10,14 +10,22 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-label>Connect Wirelessly</ion-label>
-      <ion-toggle color="secondary" [(ngModel)]="wirelessHeadset"></ion-toggle>
+      <ion-toggle color="secondary" [(ngModel)]="mainEventsService.wirelessMode"></ion-toggle>
     </ion-buttons>
     <ion-title>{{'PATIENT.PATIENT' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
+  <ion-item color='secondary' *ngIf="mainEventsService.wirelessMode">
+    <ion-label>Connect To Headset Wirelessly </ion-label>
+    <ion-select placeholder="Select Headset" [(ngModel)]="mainEventsService.wirelessHeadsetSelected">
+      <ion-select-option *ngFor="let headset of headsets" [value]="headset.serial">{{ headset.name }} ({{headset.serial}})
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-card *ngIf="!mainEventsService.wirelessMode">
     <ion-card-content>
       <div class="headset-status">
         <div *ngIf="mainEventsService.headsetIsReady()">
@@ -85,14 +93,6 @@
       </ion-item>
     </ion-card-content>
   </ion-card>
-
-  <ion-item color='secondary'  *ngIf="wirelessHeadset">
-    <ion-label>Connect To Headset Wirelessly </ion-label>
-    <ion-select placeholder="Select Headset" (ionChange)="connectToHeadsetWirelessly($event)">
-      <ion-select-option *ngFor="let headset of headsets" [value]="headset.serial">{{ headset.name }} ({{headset.serial}})</ion-select-option>
-    </ion-select>
-  </ion-item>
-
   <ion-list>
     <ion-grid>
       <ion-row class="ion-align-items-start ion-justify-content-center">
